# compiler

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  agents.md
.codex/skills/: _index.md  compiler-debugging.md  language-feature-development.md  testing-and-regressions.md  wasm-playground-workflow.md
.github/workflows/: build.yml  deploy-playground.yml
docs/: ArkadeKitties.md  arkade-primitives-spec.md  arkade-script-with-assets.md
examples/: arkade_kitties.ark  arkade_kitties.hack  arkade_kitties.json  bare.ark  bare.json  bare.tap  beacon.ark  compile_all.rs  controlled_mint.ark  fee_adapter.ark  fuji_safe.ark  fuji_safe.json  fuji_safe.tap  htlc.ark  htlc.hack  htlc.json  htlc.tap  nft_mint.ark  nft_mint.json  non_interactive_swap.ark  non_interactive_swap.hack  non_interactive_swap.json  payment_auth.ark  payment_auth.json  price_beacon.ark  simple.tap  single_sig.ark  single_sig.hack  single_sig.json  stability_offer.ark  stable_position.ark  threshold_oracle.ark  token_vault.ark
playground/: .gitignore  arkade-language.js  build.sh  generate_contracts.sh  index.html  main.js  serve.sh  style.css
scripts/: pre-commit
src/: lib.rs  main.rs  wasm.rs
src/compiler/: mod.rs
src/models/: mod.rs
src/opcodes/: mod.rs
src/parser/: debug.rs  grammar.pest  mod.rs
src/typechecker/: mod.rs
tests/: arkade_kitties_test.rs  asset_introspection_test.rs  bare_vtxo_test.rs  beacon_test.rs  contract_import_instantiation_test.rs  controlled_mint_test.rs  epoch_limiter_test.rs  fee_adapter_test.rs  fuji_safe_test.rs  group_properties_test.rs  htlc_test.rs  io_introspection_test.rs  new_opcodes_test.rs  threshold_multisig_test.rs  threshold_oracle_test.rs  token_vault_test.rs  tx_introspection_test.rs
