[package]
name = "arkade-compiler"
version = "0.1.0"
edition = "2021"
description = "A compiler for Arkade Script - a language for creating Bitcoin Taproot scripts"
authors = ["tiero"]
license = "MIT"

[dependencies]
pest = "2.7.8"
pest_derive = "2.7.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.3", features = ["derive"] }
chrono = "0.4.34"

# WASM support (optional, for web playground)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[lib]
name = "arkade_compiler"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
tempfile = "3.10.1"
assert_fs = "1.1.1"
predicates = "3.1.0"

[[bin]]
name = "arkadec"
path = "src/main.rs" 